Fix background image path and ensure visibility with !important flags

--- a/assets/app/id.css
+++ b/assets/app/id.css
@@ -15,7 +15,7 @@
 
 body{
     margin: 0;
-    background-color: transparent;
+    background-color: transparent !important;
     min-height: 100vh;
     font-family: "Poppins", "Roboto", sans-serif;
     color: white;
@@ -238,7 +238,7 @@ body{
 }
 
 .background{
-    position: fixed;
+    position: fixed !important;
     top: 0;
     left: 0;
     right: 0;
@@ -247,11 +247,12 @@ body{
     height: 100vh;
     z-index: -10;
     background-color: #101317;
-    background-image: url('assets/app/images/aa4d7b5d-24c8-4502-b0df-08f11e441e4b.png');
+    background-image: url('images/aa4d7b5d-24c8-4502-b0df-08f11e441e4b.png') !important;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    display: block !important;
 }
 
 .login_text{
